# Patched `sc-network-light` (polkadot-stable2409). Keep aligned with substrate `client/network/light/Cargo.toml`.

[package]
name = "sc-network-light"
description = "Substrate light network protocol"
version = "0.44.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["DK Technologies, Inc."]
edition = "2021"
homepage = "https://abenihr.com"
repository = "https://github.com/janicemvk/abena-ihr-backup"
documentation = "https://docs.rs/sc-network-light"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = { workspace = true }

[dependencies]
async-channel = { workspace = true }
array-bytes = { workspace = true, default-features = true }
codec = { features = ["derive"], workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
prost = { workspace = true }
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-network-types.workspace = true
sc-network-types.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
thiserror = { workspace = true }
